[tool.poetry]
name = "hello-islp"
version = "0.1.0"
description = ""
authors = ["Yuen-Chi Lian <foss@yclian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ISLP = "^0.3.22"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
notebook = "^7.1.2"
faker = "^25.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
